--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.1",
     "jquery": "^3.6.0",
     "json-server": "^0.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
